@@ -3,6 +3,7 @@ version 0.99.5-rc XX-Ago-2010
  . [FIX] Artifact fixer is a compile time option in ccConfig. Disabled by default
  . [FIX] CocosDenshion: Added SDK4.0 compile check in CDAudioManager
  . [FIX] CocosDenshion: panning does not work correctly on iOS4 (issue #949)
+ . [FIX] Director: Works with Fast FPS disabled (issue #954)
  . [FIX] Sprite: little optimization when using BatchNode + children
  . [FIX] Tools: mkatlas supports artifact removal (issue #549)
  . [FIX] Tools: mkatlas supports spaces in the name (issue #618)
